URL(String) constructor is deprecated in Java 20+